<resources>
    <string name="app_name">Pokemon App</string>
    <string name="entrenador">Pokemon trainer</string>
    <string name="sexo_titulo">Gender</string>
    <string name="sexo_masculino">Male</string>
    <string name="sexo_femenino">Female</string>
    <string name="submit_text">ENTER</string>
    <string name="ToDo">TODO</string>
    <string name="favorites">Favorites</string>
    <string name="recents">Recents</string>
    <string name="all">All</string>
    <string name="poke_image">"https://pokeres.bastionbot.org/images/pokemon/1.png"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="preference_file_key">com.example.proyectofinalpokemon.PREFERENCE_FILE_KEY</string>
    <string name="pokemon_abilities">Pokemon Abilities</string>
</resources>
