<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgEntrenador"
        android:layout_width="122dp"
        android:layout_height="107dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:mipmap/sym_def_app_icon"
        android:contentDescription="@string/ToDo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtEntrenador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgEntrenador"
        android:hint="@string/entrenador">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/trainerNameTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txtSexo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/sexo_titulo"
        app:layout_constraintEnd_toEndOf="@+id/txtEntrenador"
        app:layout_constraintStart_toStartOf="@+id/txtEntrenador"
        app:layout_constraintTop_toBottomOf="@+id/txtEntrenador" />

    <RadioGroup
        android:id="@+id/rbgSexo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/txtSexo"
        app:layout_constraintStart_toStartOf="@+id/txtSexo"
        app:layout_constraintTop_toBottomOf="@+id/txtSexo">

        <RadioButton
            android:id="@+id/rbMasculino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/sexo_masculino"
            />

        <RadioButton
            android:id="@+id/rbFemenino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/sexo_femenino"
            />
    </RadioGroup>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/submit_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/rbgSexo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/rbgSexo"
        app:layout_constraintTop_toBottomOf="@+id/rbgSexo"
        app:layout_constraintVertical_bias="0.81" />


</androidx.constraintlayout.widget.ConstraintLayout>