<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toTopOf="parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtMessage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0"
        android:text="TextView" />


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBarTab"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">
        </androidx.appcompat.widget.Toolbar>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tbPokemon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            app:tabTextColor="@android:color/white"
            tools:layout_editor_absoluteX="1dp">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabFavorites"
                android:icon="@drawable/ic_star_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favorites" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabRecent"
                android:icon="@drawable/ic_turned_in_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recents" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabAll"
                android:icon="@drawable/ic_photo_camera_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all" />
        </com.google.android.material.tabs.TabLayout>

    </com.google.android.material.appbar.AppBarLayout>

    
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

    </androidx.viewpager2.widget.ViewPager2>


</androidx.coordinatorlayout.widget.CoordinatorLayout>